--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -500,6 +500,14 @@
                                         android:textSize="20sp"
                                         android:textAlignment="center"
                                         android:textStyle="bold"/>
+                                    <TextView
+                                        android:id="@+id/month_name"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="মাসের নাম"
+                                        android:textSize="17sp"
+                                        android:textAlignment="center"
+                                        android:textStyle="bold"/>
 
                                     <!-- Row 1 -->
                                     <TableRow>
@@ -1060,7 +1068,7 @@
         app:behavior_peekHeight="25dp"
         app:layout_behavior="@string/bottom_sheet_behavior"
         app:elevation="4dp"
-        android:background="@color/Green_with_80_Black"
+        android:background="@color/com_facebook_likeboxcountview_border_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -1174,16 +1182,6 @@
                     android:textSize="18sp"
                     android:backgroundTint="#007BFF" android:textColor="@android:color/white"/>
 
-                <Button
-                    android:id="@+id/registerButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="নতুন অ্যাকাউন্ট তৈরি করুন"
-                    android:padding="12dp"
-                    android:textSize="16sp"
-                    android:layout_marginTop="16dp"
-                    style="?attr/materialButtonOutlinedStyle"
-                    android:textColor="#007BFF"/>
             </LinearLayout>
 
             <WebView
