--- a/app/src/main/res/layout/item_members.xml
+++ b/app/src/main/res/layout/item_members.xml
@@ -10,26 +10,28 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:padding="16dp"
+            android:padding="10dp"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp">
+
                 <ImageView
                     android:id="@+id/imgPhoto"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:scaleType="centerCrop"
-                    android:padding="4dp"
-                    android:visibility="gone"/>
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/default_img" />
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:orientation="vertical">
 
 
@@ -38,6 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Name"
+                    android:paddingBottom="2dp"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -45,8 +48,7 @@
                     android:id="@+id/tvDesignation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Description"
-                    android:visibility="gone"
+                    android:text="Designation"
                     android:textSize="16sp" />
 
                 <TextView
@@ -59,10 +61,22 @@
 
             </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/btnCall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Call"
+            android:drawableStart="@android:drawable/ic_menu_call"
+            android:padding="8dp"
+            android:textSize="14sp"/>
 
 
-
-
+    </LinearLayout>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
