--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -501,10 +501,10 @@
                                         android:textAlignment="center"
                                         android:textStyle="bold"/>
                                     <TextView
-                                        android:id="@+id/month_name"
+                                        android:id="@+id/month_year"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="মাসের নাম"
+                                        android:text="মাস ও বছর"
                                         android:textSize="17sp"
                                         android:textAlignment="center"
                                         android:textStyle="bold"/>
