--- a/app/src/main/res/layout/activity_update_prayer_times.xml
+++ b/app/src/main/res/layout/activity_update_prayer_times.xml
@@ -209,13 +209,35 @@
             android:stretchColumns="*"
             android:shrinkColumns="*"
             android:padding="2dp">
-            <TextView
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/monthly_income_expence"
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:textStyle="bold"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="8dp"
+                android:gravity="center">
+
+                <Spinner
+                    android:id="@+id/monthSpinner"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:spinnerMode="dropdown" />
+
+                <Spinner
+                    android:id="@+id/yearSpinner"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:spinnerMode="dropdown"
+                    android:layout_marginStart="8dp"/>
+            </LinearLayout>
 
             <!-- Row 1 -->
             <TableRow>
