--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1137,14 +1137,14 @@
                         android:text="@string/firoz_mobile"/>
                 </LinearLayout>
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="25dp"
-                android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_height="match_parent">
+                android:padding="16dp">
+
                 // User Login
                 <TextView
                     android:layout_width="wrap_content"
@@ -1161,27 +1161,31 @@
                     android:layout_height="wrap_content"
                     android:hint="ইমেল"
                     android:inputType="textEmailAddress"
-                    android:padding="12dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/edittext_background"/>
+                    android:padding="10dp"
+                    android:layout_marginBottom="8dp"/>
+
                 <EditText
                     android:id="@+id/passwordInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="পাসওয়ার্ড"
                     android:inputType="textPassword"
-                    android:padding="12dp"
-                    android:layout_marginBottom="24dp"
-                    android:background="@drawable/edittext_background"/>
+                    android:padding="10dp"
+                    android:layout_marginBottom="16dp"/>
+
                 <Button
                     android:id="@+id/loginButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="লগইন"
-                    android:padding="12dp"
-                    android:textSize="18sp"
-                    android:backgroundTint="#007BFF" android:textColor="@android:color/white"/>
+                    android:text="লগইন করুন"/>
 
+                <Button
+                    android:id="@+id/updatePrayerTimesButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="নামাজের সময় আপডেট করুন"
+                    android:layout_marginTop="20dp"
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <WebView
