--- a/app/src/main/res/layout/item_members.xml
+++ b/app/src/main/res/layout/item_members.xml
@@ -35,7 +35,8 @@
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                     <TextView
                         android:id="@+id/tvName"
                         android:layout_width="wrap_content"
@@ -44,43 +45,41 @@
                         android:paddingBottom="2dp"
                         android:textSize="18sp"
                         android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tvDesignation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Designation"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/tvMobile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Mobile"
+                        android:textSize="14sp"
+                        android:textColor="#666666" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:id="@+id/tvDesignation"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Designation"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/tvMobile"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Mobile"
-                            android:textSize="14sp"
-                            android:textColor="#666666" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="end">
-                        <ImageButton
-                            android:id="@+id/btnCall"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:background="@drawable/call"
-                            android:scaleType="centerInside"
-                            android:padding="16dp" />
-                    </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="end">
+                    <ImageButton
+                        android:id="@+id/btnCall"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="7dp"
+                        android:background="@drawable/call"
+                        android:scaleType="centerInside"
+                        android:padding="16dp" />
+                    <ImageButton
+                        android:id="@+id/btnWhatsApp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/whatsapp"
+                        android:scaleType="centerInside"
+                        android:padding="16dp" />
                 </LinearLayout>
             </LinearLayout>
     </LinearLayout>
