--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1171,7 +1171,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="লগইন করুন"
+                    android:text="Admin Login"
                     android:textSize="32sp"
                     android:textStyle="bold"
                     android:layout_gravity="center_horizontal"
