--- a/app/src/main/res/layout/activity_fullscreen_image.xml
+++ b/app/src/main/res/layout/activity_fullscreen_image.xml
@@ -8,5 +8,6 @@ android:layout_height="match_parent">
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="fitCenter"
+    android:src="@drawable/onumodon"
     android:background="#000000" />
 </FrameLayout>
